--- a/ChallengeTextFieldDelegateApp/Base.lproj/Main.storyboard
+++ b/ChallengeTextFieldDelegateApp/Base.lproj/Main.storyboard
@@ -30,6 +30,9 @@
                             </textField>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="m3B-u4-DYC" userLabel="LockedSwitch">
                                 <rect key="frame" x="521" y="164" width="51" height="31"/>
+                                <connections>
+                                    <action selector="lockSwitchDidChange" destination="BYZ-38-t0r" eventType="valueChanged" id="Uhy-AO-cpX"/>
+                                </connections>
                             </switch>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GMo-nh-L0G" userLabel="LockableText">
                                 <rect key="frame" x="30" y="165" width="481" height="30"/>
