:rocket: Check that user input is only numbers and that the maximum length is 5 digits

--- a/ChallengeTextFieldDelegateApp/Base.lproj/Main.storyboard
+++ b/ChallengeTextFieldDelegateApp/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="K5w-0Z-gw2" userLabel="ZipCode">
                                 <rect key="frame" x="30" y="75" width="540" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sFm-Fb-oir" userLabel="CashText">
                                 <rect key="frame" x="30" y="120" width="540" height="30"/>
