--- a/ChallengeTextFieldDelegateApp/Base.lproj/Main.storyboard
+++ b/ChallengeTextFieldDelegateApp/Base.lproj/Main.storyboard
@@ -26,7 +26,7 @@
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sFm-Fb-oir" userLabel="CashText">
                                 <rect key="frame" x="30" y="120" width="540" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                             </textField>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="m3B-u4-DYC" userLabel="LockedSwitch">
                                 <rect key="frame" x="521" y="164" width="51" height="31"/>
